[build-system]
requires = ["setuptools>=61.0", "pandas", "argparse", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "Chia_NFT_Helper"
version = "0.0.1"
authors = [
  { name="King Leonidas", email="king@the300.net" },
]
description = "ChiaNFTHelper is a Python module that provides a convenient way to fetch and extract owner XCH addresses and owner DID for a given NFT collection ID, utlising the MintGarden API and their collection ID system. The extracted data is then exported into an Excel file."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/L4bb3rs/Chia_NFT_Helper"